[package]
name = "chron"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", default-features = false, features = ["compress-brotli", "macros"] }
anyhow = "1.0.56"
askama = { version = "0.12.1", default-features = false }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.2.2"
clap = { version = "4.1.6", features = ["derive", "env"] }
cron = "0.12.0"
directories = "4.0.1"
humantime-serde = "1.1.1"
lazy_static = "1.4.0"
log = "0.4.17"
notify = { version = "5.1.0", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = { version = "0.2.1", default-features = false }
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
simple_logger = { version = "2.2.0", features = ["stderr"] }
toml = { version = "0.7.2", default-features = false, features = ["parse"] }

[build-dependencies]
clap = { version = "4.1.6", features = ["derive", "env"] }
clap_complete = "4.1.3"
clap_mangen = "0.2.9"

[dev-dependencies]
assert_matches = "1.5"
