[package]
name = "chron"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", default-features = false, features = ["compress-brotli", "macros"] }
anyhow = "1.0.56"
askama = { version = "0.12.1", default-features = false }
chrono = { version = "0.4.19", features = ["serde"] }
chrono-humanize = "0.2.2"
clap = { version = "4.1.6", features = ["derive", "env"] }
cron = "0.12.0"
directories = "5.0.1"
dirs = "5.0.1"
humantime-serde = "1.1.1"
log = "0.4.17"
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = { version = "0.4.1", default-features = false }
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
simple_logger = { version = "5.0.0", features = ["stderr"] }
tokio = { version = "1.39.2", features = ["fs"] }
tokio-util = "0.7.11"
toml = { version = "0.8.9", default-features = false, features = ["parse"] }

[build-dependencies]
clap = { version = "4.1.6", features = ["derive", "env"] }
clap_complete = "4.1.3"
clap_mangen = "0.2.9"

[dev-dependencies]
assert_matches = "1.5"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
