[package]
name = "chron"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", default-features = false, features = ["compress-brotli", "macros"] }
async-sqlite = { version = "0.5.0", features = ["chrono"] }
anyhow = "1.0.56"
askama = { version = "0.14.0", features = ["derive"] }
chrono = { version = "0.4.19", default-features = false }
chrono-humanize = "0.2.2"
clap = { version = "4.1.6", features = ["derive", "env"] }
cli-tables = "0.2.1"
cron = "0.12.0"
ctrlc = "3.4.5"
directories = "5.0.1"
dirs = "5.0.1"
humantime-serde = "1.1.1"
log = "0.4.17"
notify = { version = "6.1.1", default-features = false, features = ["macos_fsevent"] }
notify-debouncer-mini = { version = "0.4.1", default-features = false }
rand = { version = "0.9.2", default-features = false, features = ["thread_rng"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
simple_logger = { version = "5.0.0", features = ["stderr"] }
tokio = { version = "1.47.1", features = ["fs", "io-util", "macros", "net", "process"] }
tokio-util = "0.7.11"
toml = { version = "0.8.9", default-features = false, features = ["parse"] }

[build-dependencies]
clap = { version = "4.1.6", features = ["derive", "env"] }
clap_complete = "4.1.3"
clap_mangen = "0.2.9"

[dev-dependencies]
assert_matches = "1.5"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
